<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".sync.actions.fragments.ChooseSignInTypeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvServerUrlLabelLogin"
        style="@style/HeadingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        android:text="@string/main_activity_server_url_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvServerUrlLogin"
        style="@style/TextServerUrlStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_label_field_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/default_sync_server_url"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLabelLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleLogin"
        style="@style/LargeHeadingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLogin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAnonymousSignInLogin"
        style="@style/ButtonStyleAnonymous"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/portrait_regular_margin"
        android:text="@string/anonymous_user"
        app:layout_constraintBottom_toTopOf="@+id/btnUserSignInLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUserSignInLogin"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/portrait_regular_margin"
        android:text="@string/authenticated_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnonymousSignInLogin"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
