...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLogin"
        app:layout_constraintBottom_toTopOf="@+id/inputUsernameLogin"
        />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/InputFieldLabelStyle"
        android:layout_width="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextUsername"
            style="@style/SmallTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Username"

            tools:ignore="TextContrastCheck" />
...
        style="@style/TextInputTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/portrait_regular_margin"
        android:padding="8dp"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toTopOf="@+id/btnAuthenticateUserLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameLogin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextPassword"
            style="@style/SmallTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Password"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
...
