<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDrawerHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navDrawerSurface">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnDrawerClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:minWidth="36dp"
                android:minHeight="36dp"
                app:srcCompat="@drawable/ic_menu"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDrawerLogin"
                style="@style/TextButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/portrait_secondary_margin"
                android:text="@string/drawer_sign_in_button_text" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
