...
                android:id="@+id/toolbarMainActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_main_activity">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnDrawerOpen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/zxing_transparent"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/ic_menu"
...
